--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "eslint-plugin-import": "^2.12.0",
     "file-loader": "^1.1.11",
     "fs": "0.0.1-security",
-    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
+    "nunjucks": "^3.1.3",
+    "nunjucks-webpack-plugin": "^4.0.1",
     "optimize-css-assets-webpack-plugin": "^4.0.2",
     "path": "^0.12.7",
     "postcss-combine-duplicated-selectors": "^5.0.0",
@@ -48,6 +49,7 @@
     "webpack": "^4.10.1",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4",
+    "webpack-glob-entry": "^2.1.1",
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
