--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
     "eslint": "^4.19.1",
@@ -30,6 +31,7 @@
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
     "nunjucks": "^3.1.3",
+    "nunjucks-loader": "^3.0.0",
     "nunjucks-webpack-plugin": "^4.0.1",
     "optimize-css-assets-webpack-plugin": "^4.0.2",
     "path": "^0.12.7",
