--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,8 @@
 {
-  "plugins": ["stylelint-order", "stylelint-scss"],
+  "plugins": [
+    "stylelint-order",
+    "stylelint-scss"
+  ],
   "extends": "stylelint-config-sass-guidelines",
   "rules": {
     "indentation": 2,
@@ -26,10 +29,15 @@
     "selector-pseudo-element-no-unknown": true,
     "selector-pseudo-element-colon-notation": "single",
     "selector-class-pattern": "^[a-z0-9\\-_]+$",
-    "rule-empty-line-before": [ "always",
+    "rule-empty-line-before": [
+      "always",
       {
-        "except": ["first-nested"],
-        "ignore": ["after-comment"]
+        "except": [
+          "first-nested"
+        ],
+        "ignore": [
+          "after-comment"
+        ]
       }
     ],
     "no-missing-end-of-source-newline": true,
@@ -40,15 +48,30 @@
     "block-no-empty": true,
     "selector-no-qualifying-type": null,
     "scss/selector-no-redundant-nesting-selector": null,
+    "scss/at-rule-no-unknown": null,
     "order/properties-alphabetical-order": null,
     "order/order": [
-      ["dollar-variables", "custom-properties", "declarations", "rules", "at-rules"]
+      [
+        "dollar-variables",
+        "custom-properties",
+        "declarations",
+        "rules",
+        "at-rules"
+      ]
     ],
     "order/properties-order": [
       "width",
       "height",
-      "margin", "margin-top", "margin-right", "margin-bottom", "margin-left",
-      "padding", "padding-top", "padding-right", "padding-bottom", "padding-left"
+      "margin",
+      "margin-top",
+      "margin-right",
+      "margin-bottom",
+      "margin-left",
+      "padding",
+      "padding-top",
+      "padding-right",
+      "padding-bottom",
+      "padding-left"
     ]
   }
 }
