--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "webpack project starter",
   "main": "src/js/index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config ./config/webpack.dev.js",
-    "build": "webpack --config ./config/webpack.prod.js"
+    "build": "webpack --config ./config/webpack.prod.js",
+    "build::theme-light": "webpack --config ./config/webpack.prod.js --theme=light",
+    "start-dev": "webpack-dev-server --config ./config/webpack.dev.js",
+    "start-dev::theme-light": "webpack-dev-server --config ./config/webpack.dev.js --theme=light",
+    "start-build": "lite-server --baseDir=build",
+    "stylelint-fix": "stylelint \"**/*.scss\" --syntax scss --fix"
   },
   "repository": "github:khryshyn/smart-kit",
   "author": "kgroup",
@@ -28,7 +32,9 @@
     "eslint-plugin-import": "^2.12.0",
     "file-loader": "^1.1.11",
     "fs": "0.0.1-security",
+    "lite-server": "^2.3.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "minimist": "^1.2.0",
     "node-sass": "^4.9.0",
     "nunjucks": "^3.1.3",
     "nunjucks-loader": "^3.0.0",
@@ -46,6 +52,8 @@
     "stylelint": "^9.2.1",
     "stylelint-config-sass-guidelines": "^5.0.0",
     "stylelint-formatter-pretty": "^1.0.3",
+    "stylelint-order": "^0.8.1",
+    "stylelint-scss": "^3.1.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.10.1",
