--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "smartkit",
   "version": "1.0.0",
   "description": "webpack project starter",
-  "main": "src/js/index.js",
+  "main": "src/js/app.js",
   "scripts": {
     "build": "webpack --config ./config/webpack.prod.js",
-    "build::theme-light": "webpack --config ./config/webpack.prod.js --theme=light",
     "start-dev": "webpack-dev-server --config ./config/webpack.dev.js",
+    "start-prod": "lite-server --baseDir=build",
     "start-dev::theme-light": "webpack-dev-server --config ./config/webpack.dev.js --theme=light",
-    "start-build": "lite-server --baseDir=build",
-    "stylelint-fix": "stylelint \"**/*.scss\" --syntax scss --fix"
+    "build::theme-light": "webpack --config ./config/webpack.prod.js --theme=light",
+    "test": "jest --config=./jest.config.json"
   },
   "repository": "github:khryshyn/smart-kit",
   "author": "kgroup",
@@ -19,11 +19,14 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-airbnb": "^2.4.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-3": "^6.24.1",
+    "callsite": "1.0.0",
+    "case-sensitive-paths-webpack-plugin": "^2.1.1",
+    "chalk": "2.2.0",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
+    "cross-env": "^5.1.3",
     "css-loader": "^0.28.11",
+    "css-mqpacker": "6.0.1",
     "cssnano": "^3.10.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
@@ -32,9 +35,12 @@
     "eslint-plugin-import": "^2.12.0",
     "file-loader": "^1.1.11",
     "fs": "0.0.1-security",
+    "jimp": "^0.2.28",
+    "json-loader": "0.5.7",
     "lite-server": "^2.3.0",
     "mini-css-extract-plugin": "^0.4.0",
     "minimist": "^1.2.0",
+    "modernizr-loader": "1.0.1",
     "node-sass": "^4.9.0",
     "nunjucks": "^3.1.3",
     "nunjucks-loader": "^3.0.0",
@@ -45,6 +51,7 @@
     "postcss-flexbugs-fixes": "^3.3.1",
     "postcss-loader": "^2.1.5",
     "postcss-pseudoelements": "^5.0.0",
+    "responsive-loader": "^1.1.0",
     "sass-loader": "^7.0.1",
     "sass-mq": "^4.0.2",
     "simple-progress-webpack-plugin": "^1.1.2",
@@ -56,13 +63,17 @@
     "stylelint-scss": "^3.1.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "uglifyjs-webpack-plugin": "^1.2.5",
+    "url-loader": "^0.6.2",
     "webpack": "^4.10.1",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4",
     "webpack-glob-entry": "^2.1.1",
+    "webpack-manifest-plugin": "^2.0.3",
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "airbnb-browser-shims": "^2.1.0"
+    "airbnb-browser-shims": "^2.1.0",
+    "jquery": "3.2.1",
+    "modernizr": "3.5.0"
   }
 }
