Update package configs

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start-dev": "webpack-dev-server --config ./config/webpack.config.js",
     "start-prod": "lite-server --baseDir=build",
     "start-dev::theme-light": "webpack-dev-server --config ./config/webpack.config.js --theme=light ",
-    "build::theme-light": "webpack --config ./config/webpack.config.js --theme=light",
-    "test": "jest --config=./jest.config.json"
+    "build::theme-light": "webpack --config ./config/webpack.config.js --theme=light"
   },
   "repository": "github:khryshyn/smart-kit",
   "author": "kgroup",
