--- a/package.json
+++ b/package.json
@@ -67,8 +67,7 @@
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4",
     "webpack-glob-entry": "^2.1.1",
-    "webpack-manifest-plugin": "^2.0.3",
-    "webpack-merge": "^4.1.2"
+    "webpack-manifest-plugin": "^2.0.3"
   },
   "dependencies": {
     "airbnb-browser-shims": "^2.1.0",
