--- a/package.json
+++ b/package.json
@@ -18,12 +18,9 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-airbnb": "^2.4.0",
-    "callsite": "1.0.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
-    "chalk": "2.2.0",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
-    "cross-env": "^5.1.3",
     "css-loader": "^0.28.11",
     "css-mqpacker": "6.0.1",
     "cssnano": "^3.10.0",
@@ -34,8 +31,7 @@
     "eslint-plugin-import": "^2.12.0",
     "file-loader": "^1.1.11",
     "fs": "0.0.1-security",
-    "jimp": "^0.2.28",
-    "json-loader": "0.5.7",
+    "json-loader": "^0.5.7",
     "lite-server": "^2.3.0",
     "mini-css-extract-plugin": "^0.4.0",
     "minimist": "^1.2.0",
@@ -50,7 +46,6 @@
     "postcss-flexbugs-fixes": "^3.3.1",
     "postcss-loader": "^2.1.5",
     "postcss-pseudoelements": "^5.0.0",
-    "responsive-loader": "^1.1.0",
     "sass-loader": "^7.0.1",
     "sass-mq": "^4.0.2",
     "simple-progress-webpack-plugin": "^1.1.2",
@@ -71,7 +66,7 @@
   },
   "dependencies": {
     "airbnb-browser-shims": "^2.1.0",
-    "jquery": "3.2.1",
-    "modernizr": "3.5.0"
+    "jquery": "^3.3.1",
+    "modernizr": "^3.6.0"
   }
 }
