--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start-dev": "webpack-dev-server --config ./config/webpack.config.js",
     "start-prod": "lite-server --baseDir=build",
     "start-dev::theme-light": "webpack-dev-server --config ./config/webpack.config.js --theme=light ",
-    "build::theme-light": "webpack --config ./config/webpack.config.js --theme=light"
+    "build::theme-light": "webpack --config ./config/webpack.config.js --theme=light",
+    "test": "jest --config=./jest.config.json"
   },
   "repository": "github:khryshyn/smart-kit",
   "author": "kgroup",
@@ -16,8 +17,10 @@
   "devDependencies": {
     "autoprefixer": "^8.5.1",
     "babel-core": "^6.26.3",
+    "babel-jest": "^23.0.1",
     "babel-loader": "^7.1.4",
     "babel-preset-airbnb": "^2.4.0",
+    "callsite": "^1.0.0",
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
@@ -31,6 +34,8 @@
     "eslint-plugin-import": "^2.12.0",
     "file-loader": "^1.1.11",
     "fs": "0.0.1-security",
+    "jest": "^21.2.1",
+    "jest-teamcity-reporter": "^0.9.0",
     "json-loader": "^0.5.7",
     "lite-server": "^2.3.0",
     "mini-css-extract-plugin": "^0.4.0",
