--- a/package.json
+++ b/package.json
@@ -6,72 +6,83 @@
   "scripts": {
     "build": "webpack --mode=production --config ./config/webpack.config.js",
     "start-dev": "webpack-dev-server --config ./config/webpack.config.js",
-    "start-prod": "lite-server --baseDir=build",
-    "start-dev::theme-light": "webpack-dev-server --config ./config/webpack.config.js --theme=light ",
-    "build::theme-light": "webpack --config ./config/webpack.config.js --theme=light",
-    "test": "jest --config=./jest.config.json"
+    "start-prod": "lite-server --baseDir=build --config=./config/lite-server-config.js",
+    "start-dev::theme-light": "webpack-dev-server --config ./config/webpack.config.js --theme=light",
+    "build::theme-light": "webpack --mode=production --config ./config/webpack.config.js --theme=light",
+    "test": "jest --config=./jest.config.json --silent",
+    "stylelint-fix": "stylelint \"**/*.scss\" --syntax scss --fix"
   },
   "repository": "github:khryshyn/smart-kit",
   "author": "kgroup",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^8.5.1",
+    "autoprefixer": "^8.6.4",
+    "axios-mock-adapter": "^1.15.0",
     "babel-core": "^6.26.3",
-    "babel-jest": "^23.0.1",
+    "babel-eslint": "^8.2.5",
+    "babel-jest": "^23.2.0",
     "babel-loader": "^7.1.4",
-    "babel-preset-airbnb": "^2.4.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-airbnb": "^2.5.1",
     "callsite": "^1.0.0",
-    "case-sensitive-paths-webpack-plugin": "^2.1.1",
+    "case-sensitive-paths-webpack-plugin": "^2.1.2",
     "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.1",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.11",
-    "css-mqpacker": "6.0.1",
+    "css-mqpacker": "6.0.2",
     "cssnano": "^3.10.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint": "^5.0.1",
+    "eslint-config-airbnb-base": "^13.0.0",
     "eslint-formatter-pretty": "^1.3.0",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-import": "^2.13.0",
     "file-loader": "^1.1.11",
     "fs": "0.0.1-security",
-    "jest": "^21.2.1",
+    "jest": "^23.2.0",
     "jest-teamcity-reporter": "^0.9.0",
     "json-loader": "^0.5.7",
-    "lite-server": "^2.3.0",
-    "mini-css-extract-plugin": "^0.4.0",
+    "lite-server": "^2.4.0",
+    "mini-css-extract-plugin": "^0.4.1",
     "minimist": "^1.2.0",
     "modernizr-loader": "1.0.1",
     "node-sass": "^4.9.0",
     "nunjucks": "^3.1.3",
     "nunjucks-loader": "^3.0.0",
     "nunjucks-webpack-plugin": "^4.0.1",
-    "optimize-css-assets-webpack-plugin": "^4.0.2",
+    "optimize-css-assets-webpack-plugin": "^4.0.3",
     "path": "^0.12.7",
-    "postcss-combine-duplicated-selectors": "^5.0.0",
+    "postcss-combine-duplicated-selectors": "^5.0.2",
     "postcss-flexbugs-fixes": "^3.3.1",
     "postcss-loader": "^2.1.5",
     "postcss-pseudoelements": "^5.0.0",
-    "sass-loader": "^7.0.1",
-    "sass-mq": "^4.0.2",
+    "sass-loader": "^7.0.3",
+    "sass-mq": "^5.0.0",
     "simple-progress-webpack-plugin": "^1.1.2",
     "style-loader": "^0.21.0",
-    "stylelint": "^9.2.1",
+    "stylelint": "^9.3.0",
     "stylelint-config-sass-guidelines": "^5.0.0",
     "stylelint-formatter-pretty": "^1.0.3",
     "stylelint-order": "^0.8.1",
-    "stylelint-scss": "^3.1.0",
+    "stylelint-scss": "^3.1.3",
     "stylelint-webpack-plugin": "^0.10.5",
-    "uglifyjs-webpack-plugin": "^1.2.5",
-    "url-loader": "^0.6.2",
-    "webpack": "^4.10.1",
-    "webpack-cli": "^2.1.4",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.14.0",
+    "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
     "webpack-glob-entry": "^2.1.1",
     "webpack-manifest-plugin": "^2.0.3"
   },
   "dependencies": {
-    "airbnb-browser-shims": "^2.1.0",
+    "axios": "^0.18.0",
+    "babel-plugin-es6-promise": "^1.1.1",
+    "babel-polyfill": "^6.26.0",
+    "es6-promise": "^4.2.4",
     "jquery": "^3.3.1",
-    "modernizr": "^3.6.0"
+    "matchmedia-polyfill": "^0.3.1",
+    "modernizr": "^3.6.0",
+    "object-assign": "^4.1.1",
+    "rxjs": "6.2.1"
   }
 }
